--- a/app/sass/c-services/c-services.scss
+++ b/app/sass/c-services/c-services.scss
@@ -16,6 +16,7 @@
     text-align: center;
     text-transform: uppercase;
     line-height: 60px;
+    cursor: pointer;
     &-text {
       display: inline-block;
       vertical-align: middle;
