--- a/app/sass/c-service/c-service.scss
+++ b/app/sass/c-service/c-service.scss
@@ -13,6 +13,7 @@
     position: absolute;
     bottom: 70px;
     padding-left: 40px;
+    padding-bottom: 30px;
     &--active {
       .c-service__text {
         display: block;
