--- a/app/sass/c-button-sing-up/c-button-sing-up.scss
+++ b/app/sass/c-button-sing-up/c-button-sing-up.scss
@@ -1,10 +1,18 @@
 .c-button-sing-up {
   width: 190px;
   height: 46px;
-  border: 3px solid #D0021B;
-  background: transparent;
-  color: #fff;
   font-size: 18px;
   line-height: 22px;
   text-transform: uppercase;
+  border: none;
+  &--transparent {
+    border: 3px solid #D0021B;
+    background: transparent;
+    color: #fff;
+  }
+  &--white {
+    background-color: #FFFFFF;
+    color: #000000;
+    font-weight: 600  ;
+  }
 }
