--- a/app/sass/main.scss
+++ b/app/sass/main.scss
@@ -53,6 +53,9 @@ a {
 .m-l-85 {
 	margin-left: 85px;
 }
+.m-l-65 {
+	margin-left: 65px;
+}
 .m-l-30 {
 	margin-left: 30px;
 }
@@ -64,6 +67,12 @@ a {
 }
 .m-l-5 {
 	margin-left: 5px;
+}
+.m-t-10 {
+	margin-top: 10px;
+}
+.m-t-15 {
+	margin-top: 15px;
 }
 .t-bold {
 	font-weight: bold;
