--- a/app/template/header.html
+++ b/app/template/header.html
@@ -3,7 +3,7 @@
 
 <head>
   <meta charset="UTF-8">
-  <link rel="stylesheet" href="css/all.css">
+  <link rel="stylesheet" href="css/all.min.css">
   <title>Document</title>
 </head>
 
