--- a/app/sass/c-form/c-form.scss
+++ b/app/sass/c-form/c-form.scss
@@ -3,6 +3,8 @@
   width: 100%;
   padding: 30px 60px 20px 60px;
   border: 1px solid #f0f0f0;
+  background-color: #fff;
+  pointer-events: all;
   &__title {
     font-size: 18px;
     line-height: 22px;
