--- a/app/template/header.html
+++ b/app/template/header.html
@@ -4,6 +4,7 @@
 <head>
   <meta charset="UTF-8">
   <link rel="stylesheet" href="css/all.min.css">
+  <script src="https://api-maps.yandex.ru/2.1/?apikey=71dde04c-cb19-4529-9a9f-bc6cac213c61&lang=ru_RU" type="text/javascript"></script>
   <title>Document</title>
 </head>
 
