--- a/app/template/footer.html
+++ b/app/template/footer.html
@@ -1,5 +1,5 @@
-<script src="js/libs.js"></script>
-<script src="js/common.js"></script>
+<script src="/js/libs.min.js"></script>
+<script src="/js/common.min.js"></script>
 
 </body>
 
