--- a/app/sass/c-bullets/c-bullets.scss
+++ b/app/sass/c-bullets/c-bullets.scss
@@ -3,6 +3,7 @@
   bottom: 45px;
   width: 100%;
   text-align: center;
+  z-index: 1;
   &__wrapper {
     list-style: none;
     display: flex;
@@ -14,7 +15,7 @@
     height: 8px;
     background-color: #fff;
     border-radius: 50%;
-    margin-right: 15px;
+    margin-right: 10px;
     cursor: pointer;
     &--active {
       background-color: #D0021B;
