--- a/app/sass/c-header/c-header.scss
+++ b/app/sass/c-header/c-header.scss
@@ -4,6 +4,7 @@
   width: 100%;
   background-color: transparent;
   padding-top: 20px;
+  z-index: 2;
   &__wrapper {
     width: 100%;
     max-width: 1200px;
@@ -11,7 +12,5 @@
     display: flex;
     justify-content: space-between;
     align-items: center;
-  }
-  &__logo {
   }
 }
