--- a/app/sass/c-main-slider/c-main-slider.scss
+++ b/app/sass/c-main-slider/c-main-slider.scss
@@ -7,4 +7,14 @@
     background-size: cover;
     background-position: center;
   }
+  &__arrows {
+    position: absolute;
+    width: 100%;
+    max-width: 1200px;
+    left: 0;
+    right: 0;
+    margin: 0 auto;
+    z-index: 2;
+    top: 120px;
+  }
 }
