--- a/app/sass/c-service/c-service.scss
+++ b/app/sass/c-service/c-service.scss
@@ -21,6 +21,9 @@
     padding-left: 40px;
     padding-bottom: 30px;
   }
+  &__image {
+    width: 100%;
+  }
   &__title {
     margin-bottom: 20px;
     font-size: 32px;
