--- a/app/sass/main.scss
+++ b/app/sass/main.scss
@@ -88,6 +88,11 @@ button {
 	display: inline-block;
 	vertical-align: top;
 }
+.l-wrapper {
+	max-width: 1200px;
+	width: 100%;
+	margin: 0 auto;
+}
 .col-red {
 	color: #D0021B;
 }
@@ -120,3 +125,5 @@ button {
 	-webkit-filter: grayscale(100%);
 	/* Chrome 19+ & Safari 6+ */
 }
+
+@import 'media';
