--- a/app/sass/components/c-news/c-news.scss
+++ b/app/sass/components/c-news/c-news.scss
@@ -7,13 +7,15 @@
     margin: 60px auto 50px auto;
   }
   &__item {
-    width: 380px;
+    max-width: 380px;
+    width: 100%;
     height: 475px;
     position: relative;
     text-align: left;
   }
   &__image {
-    height: 305px;
+    width: 100%;
+
   }
   &__mark {
     display: block;
