--- a/app/sass/components/c-footer/c-footer.scss
+++ b/app/sass/components/c-footer/c-footer.scss
@@ -6,6 +6,10 @@
     justify-content: space-between;
     padding-bottom: 10px;
   }
+  &__item {
+    display: inline-block;
+
+  }
   &__line {
     color: #333333;
   }
