--- a/app/sass/components/c-choice/c-choice.scss
+++ b/app/sass/components/c-choice/c-choice.scss
@@ -21,7 +21,7 @@
     height: 170px;
     background-position: top left;
     background-repeat: no-repeat;
-    font-size: 30px;
+    font-size: 1.875rem;
     line-height: 36px;
     color: #FFFFFF;
     text-align: left;
@@ -38,7 +38,7 @@
       position: absolute;
       top: -4px;
       left: -55px;
-      font-size: 35px;
+      font-size: 2.1875rem;
       font-weight: 500;
       line-height: 42px;
       color: #FFFFFF;
