--- a/app/sass/components/c-drop-menu/c-drop-menu.scss
+++ b/app/sass/components/c-drop-menu/c-drop-menu.scss
@@ -24,7 +24,7 @@
   &--footer {
     display: block;
     position: relative;
-    font-size: 14px;
+    font-size: 0.875rem;
     line-height: 17px;
     color: #FFFFFF;
     column-count: 2;
