--- a/app/sass/components/c-news/c-news.scss
+++ b/app/sass/components/c-news/c-news.scss
@@ -24,16 +24,16 @@
     left: 30px;
     background-color: #D0021B;
     color: #FFFFFF;
-    font-size: 18px;
+    font-size: 1.125rem;
     line-height: 22px;
     padding: 0 5px;
   }
   &__title {
-    font-size: 18px;
+    font-size: 1.125rem;
     line-height: 24px;
   }
   &__text {
-    font-size: 16px;
+    font-size: 1rem;
     line-height: 24px;
   }
   &__description {
