--- a/app/sass/components/c-service/c-service.scss
+++ b/app/sass/components/c-service/c-service.scss
@@ -27,7 +27,7 @@
   }
   &__title {
     margin-bottom: 20px;
-    font-size: 32px;
+    font-size: 2rem;
     font-style: italic;
     line-height: 37px;
     font-weight: 500;
@@ -50,7 +50,7 @@
     }
   }
   &__text {
-    font-size: 24px;
+    font-size: 1.5rem;
     line-height: 29px;
     opacity: 0;
     max-height: 0;
