--- a/app/sass/components/c-services/c-services.scss
+++ b/app/sass/components/c-services/c-services.scss
@@ -10,7 +10,7 @@
     width: 320px;
     background-color: #D0021B;
     height: 60px;
-    font-size: 18px;
+    font-size: 1.125rem;
     color: #fff;
     display: inline-block;
     text-align: center;
