--- a/app/sass/components/c-button-sing-up/c-button-sing-up.scss
+++ b/app/sass/components/c-button-sing-up/c-button-sing-up.scss
@@ -1,7 +1,7 @@
 .c-button-sing-up {
   width: 190px;
   height: 46px;
-  font-size: 18px;
+  font-size: 1.125rem;
   line-height: 22px;
   text-transform: uppercase;
   border: none;
