--- a/app/sass/components/c-footer/c-footer.scss
+++ b/app/sass/components/c-footer/c-footer.scss
@@ -23,7 +23,7 @@
     padding-top: 35px;
     width: 100%;
     margin: 0 auto;
-    font-size: 16px;
+    font-size: 1rem;
     line-height: 20px;
     text-align: center;
     color: #FFFFFF;
