--- a/app/sass/components/c-form/c-form.scss
+++ b/app/sass/components/c-form/c-form.scss
@@ -1,3 +1,4 @@
+@import "../../guide";
 .c-form {
   max-width: 440px;
   width: 100%;
@@ -6,7 +7,7 @@
   background-color: #fff;
   pointer-events: all;
   &__title {
-    font-size: 18px;
+    font-size: 1.125rem;
     line-height: 22px;
     text-transform: uppercase;
     color: #000000;
@@ -19,13 +20,13 @@
     border: 1px solid #DFDFDF;
     margin-bottom: 15px;
     padding: 11px 0 14px 25px;
-    font-size: 16px;
+    font-size: 1rem;
     line-height: 19px;
     font-weight: 500;
     color: #000000;
     @include input-placeholder {
       font-family: 'Exo 2.0';
-      font-size: 16px;
+      font-size: 1rem;
       line-height: 19px;
       font-weight: 500;
       color: #000000;
