--- a/app/sass/components/c-icons/c-icons.scss
+++ b/app/sass/components/c-icons/c-icons.scss
@@ -6,7 +6,7 @@
     line-height: 0;
     display: inline-block;
     text-align: center;
-    font-size: 27px;
+    font-size: 1.6875rem;
     &--red {
       background-color: #D0021B;
     }
