--- a/app/sass/components/c-slide-arrows/c-slide-arrows.scss
+++ b/app/sass/components/c-slide-arrows/c-slide-arrows.scss
@@ -4,7 +4,7 @@
       display: flex;
       align-items: center;
       justify-content: space-between;
-      font-size: 20px;
+      font-size: 1.25rem;
       color: #fff;
   }
   &__arrow {
