--- a/app/sass/components/c-slide/c-slide.scss
+++ b/app/sass/components/c-slide/c-slide.scss
@@ -7,14 +7,14 @@
   &__title {
     color: #fff;
     font-style: italic;
-    font-size: 72px;
-    line-height: 84px;
+    font-size: 4.5rem;
+    line-height: 5.25rem;
     padding-top: 20px;
     padding-bottom: 15px;
   }
   &__text {
     max-width: 660px;
-    font-size: 24px;
+    font-size: 1.5rem;
     line-height: 28px;
     color: #FFFFFF;
     mix-blend-mode: normal;
