--- a/app/sass/components/c-top-panel/c-top-panel.scss
+++ b/app/sass/components/c-top-panel/c-top-panel.scss
@@ -17,14 +17,14 @@
     justify-content: space-between;
   }
   &__text {
-    font-size: 16px;
+    font-size: 1rem;
     line-height: 19px;
     display: block;
   }
   &__title {
     display: block;
     text-transform: uppercase;
-    font-size: 14px;
+    font-size: 0.875rem;
     line-height: 17px;
     padding-bottom: 11px;
   }
@@ -44,7 +44,7 @@
     background-size: cover;
   }
   &__number {
-    font-size: 24px;
+    font-size: 1.5rem;
     line-height: 21px;
     font-weight: bold;
   }
