--- a/app/sass/media.scss
+++ b/app/sass/media.scss
@@ -170,4 +170,66 @@
   .c-bullets {
     bottom: 25px;
   }
+  .page-title {
+    padding-top: 15px;
+  }
+  .page-title:after {
+    margin: 0 auto;
+  }
+  .c-services__wrapper {
+    margin-top: 15px;
+  }
+  .c-service {
+    width: 100%;
+    max-width: none;
+    height: 240px;
+  }
+  .c-choice {
+    height: auto;
+  }
+  .c-choice__wrapper {
+    padding: 45px 0 0;
+  }
+  .c-choice__item {
+    width: 50%;
+    text-align: left;
+  }
+  .c-choice__text {
+    max-width: 116px;
+    padding-left: 20px;
+  }
+  .c-choice__text:before {
+    left: -15px;
+  }
+  .c-works__wrapper {
+    margin-top: 25px;
+  }
+  .c-work {
+    width: 100%;
+    font-size: 16px;
+  }
+  .c-news__wrapper {
+    margin: 25px 0 0 0;
+    flex-wrap: wrap;
+  }
+  .c-news__item {
+    max-width: 100%;
+    height: auto;
+    margin-bottom: 15px;
+  }
+  .c-map {
+    margin: 0;
+  }
+  .c-map__wrapper {
+    position: relative;
+    margin-bottom: 40px;
+  }
+  .c-form__title {
+    text-align: center;
+    font-size: 20px;
+  }
+  .c-form {
+    border: none;
+    padding: 0;
+  }
 }
