--- a/app/sass/_guide.scss
+++ b/app/sass/_guide.scss
@@ -16,3 +16,11 @@
   &:-ms-input-placeholder { @content; }
   &::-webkit-input-placeholder { @content; }
 }
+@keyframes showAnimation {
+  0% {
+    opacity: 0;
+  }
+  100% {
+    opacity: 1;
+  }
+}
