--- a/app/sass/components/c-menu-button/c-menu-button.scss
+++ b/app/sass/components/c-menu-button/c-menu-button.scss
@@ -1,24 +1,50 @@
 .c-menu-button {
-  display: inline-block;
+  display: flex;
+  position: absolute;
+  align-items: center;
+  top: 20px;
+  left: 15px;
+  width: 22px;
+  height: 26px;
   cursor: pointer;
-  &__bar{
-    width: 22px;
+  z-index: 4;
+  & > span,
+  & > span::before,
+  & > span::after {
+    display: block;
+    position: relative;
+    width: 100%;
     height: 2px;
     background-color: #FFFFFF;
-    margin: 5px 0;
-    transition: 0.4s;
+    transition-duration: .25s;
   }
-  &--active {
-    .c-menu-button__bar {
-      &--top {
-        transform: rotate(-45deg) translate(-3px, 4px) ;
-      }
-      &--middle {
-        opacity: 0;
-      }
-      &--bottom {
-        transform: rotate(45deg) translate(-6px, -7px) ;
-      }
-    }
+  & > span::before {
+    content: '';
+    top: -8px;
   }
+  & > span::after {
+    content: '';
+    top: 6px;
+  }
+
+  //&__bar{
+  //  width: 22px;
+  //  height: 2px;
+  //  background-color: #FFFFFF;
+  //  margin: 5px 0;
+  //  transition: 0.4s;
+  //}
+  //&--active {
+  //  .c-menu-button__bar {
+  //    &--top {
+  //      transform: rotate(-45deg) translate(-3px, 4px) ;
+  //    }
+  //    &--middle {
+  //      opacity: 0;
+  //    }
+  //    &--bottom {
+  //      transform: rotate(45deg) translate(-6px, -7px) ;
+  //    }
+  //  }
+  //}
 }
