--- a/app/sass/components/c-top-panel/c-top-panel.scss
+++ b/app/sass/components/c-top-panel/c-top-panel.scss
@@ -4,6 +4,7 @@
   color: #fff;
   mix-blend-mode: normal;
   border-bottom: 1px solid rgba(255,255,255,0.2);
+  z-index: 3;
   &__wrapper {
     height: 85px;
     display: flex;
