--- a/app/sass/media.scss
+++ b/app/sass/media.scss
@@ -157,7 +157,7 @@
     height: 20px;
   }
   .c-top-panel__block, .c-top-panel__wrapper {
-    justify-content: normal;
+    justify-content: space-between;
   }
   .c-top-panel__contact {
     margin-left: 15px;
