--- a/app/sass/components/c-form/c-form.scss
+++ b/app/sass/components/c-form/c-form.scss
@@ -24,6 +24,7 @@
     line-height: 19px;
     font-weight: 500;
     color: #000000;
+    -webkit-appearance: none;
     @include input-placeholder {
       font-family: 'Exo 2.0';
       font-size: 1rem;
