--- a/app/sass/components/c-services/c-services.scss
+++ b/app/sass/components/c-services/c-services.scss
@@ -17,6 +17,17 @@
     text-transform: uppercase;
     line-height: 60px;
     cursor: pointer;
+    &--detail {
+      width: 190px;
+      height: 50px;
+      background-color: transparent;
+      border: 2px solid #D0021B;
+      font-weight: bold;
+      font-size: 15px;
+      line-height: 46px;
+      text-transform: uppercase;
+      color: #D0021B;
+    }
     &-text {
       padding-right: 20px;
     }
