--- a/app/sass/components/c-slide/c-slide.scss
+++ b/app/sass/components/c-slide/c-slide.scss
@@ -2,6 +2,9 @@
   &__wrapper {
     text-align: left;
     padding-top: 195px;
+    &--detail {
+      padding-top: 130px;
+    }
   }
 
   &__title {
@@ -11,6 +14,7 @@
     line-height: 5.25rem;
     padding-top: 20px;
     padding-bottom: 15px;
+    max-width: 725px;
   }
   &__text {
     max-width: 660px;
@@ -20,5 +24,6 @@
     mix-blend-mode: normal;
     opacity: 0.7;
     font-style: italic;
+    margin-bottom: 35px;
   }
 }
