--- a/app/template/components/detail/c-main-slider.html
+++ b/app/template/components/detail/c-main-slider.html
@@ -24,7 +24,7 @@
     </header>
     <div class="c-header__shadow"></div>
     <div class="c-main-slider__wrapper">
-        <div class="c-main-slider__slide c-slide" style="background-image: url('img/main_foto.jpg')">
+        <div class="c-main-slider__slide c-main-slider__slide--service c-slide" style="background-image: url('img/main_foto.jpg')">
             <div class="c-slide__wrapper c-slide__wrapper--detail l-wrapper">
                 <h2 class="c-slide__title">Антигравийная пленка</h2>
                 <p class="c-slide__text">Небольшой текстовый блок с описанием в несколько строчек</p>
