--- a/app/sass/components/c-icons/c-icons.scss
+++ b/app/sass/components/c-icons/c-icons.scss
@@ -9,9 +9,17 @@
     font-size: 1.6875rem;
     &--red {
       background-color: #D0021B;
+      &:hover {
+        background-color: #fff;
+        color: #D0021B;
+      }
     }
     &--white {
       background-color: #FFFFFF;
+      &:hover {
+        background-color: #D0021B;
+        color: #fff;
+      }
     }
   }
 }
