--- a/app/sass/main.scss
+++ b/app/sass/main.scss
@@ -1,6 +1,6 @@
 @import './libs/libs';
 @import './libs/fonts';
-[type='checkbox'], [type='file'] {
+[type='checkbox'], [type='file'], [type='radio'] {
 	display: none;
 }
 html {
