--- a/app/template/components/detail/c-main-slider.html
+++ b/app/template/components/detail/c-main-slider.html
@@ -28,7 +28,7 @@
             <div class="c-slide__wrapper c-slide__wrapper--detail l-wrapper">
                 <h2 class="c-slide__title">Антигравийная пленка</h2>
                 <p class="c-slide__text">Небольшой текстовый блок с описанием в несколько строчек</p>
-                <a class="c-services__button" href="#"><span class="c-services__button-text">Записаться на услугу</span></a>
+                <a class="c-services__button js-show-form-popup" href="#"><span class="c-services__button-text">Записаться на услугу</span></a>
             </div>
         </div>
 
