--- a/app/template/components/index/c-footer.html
+++ b/app/template/components/index/c-footer.html
@@ -18,7 +18,7 @@
             </ul>
         </div>
         <div class="c-footer__item c-footer__item--mobile-reverse">
-            <button class="c-top-panel__button c-button-sing-up  c-button-sing-up--white mob-hidden">Записаться</button>
+            <button class="c-top-panel__button c-button-sing-up  c-button-sing-up--white mob-hidden js-show-form-popup">Записаться</button>
             <div class="c-footer__contacts">
                 <div class="l-container ml-65 m-ml-0">
                     <span class="c-top-panel__title">Контакты</span>
