--- a/app/template/components/index/c-services.html
+++ b/app/template/components/index/c-services.html
@@ -44,5 +44,5 @@
             </div>
         </div>
     </div>
-    <a class="c-services__button" href="" download><span class="c-services__button-text">Посмотреть прайс</span><span class="c-services__button-icon"></span></a>
+    <a class="c-services__button" href="img/price.pdf" target="_blank"><span class="c-services__button-text">Посмотреть прайс</span><span class="c-services__button-icon"></span></a>
 </section>
