--- a/app/template/components/index/c-top-panel.html
+++ b/app/template/components/index/c-top-panel.html
@@ -22,7 +22,7 @@
             </ul>
         </div>
         <div class="c-top-panel__block">
-            <button class="c-top-panel__button c-button-sing-up c-button-sing-up--transparent mob-hidden">Записаться</button>
+            <button class="c-top-panel__button c-button-sing-up c-button-sing-up--transparent mob-hidden js-show-form-popup">Записаться</button>
             <p class="c-top-panel__text ml-20 mob-hidden">Работаем без перерывов<br>и выходных с <span class="t-bold">9:00 - 18:00</span></p>
             <p class="c-top-panel__text m-ml-15 mobile-visible m-ml-35">Время работы 9:00 - 18:00<br>ул. Большая Ордынка 38</p>
         </div>
