--- a/app/sass/components/c-header/c-header.scss
+++ b/app/sass/components/c-header/c-header.scss
@@ -1,9 +1,8 @@
 .c-header {
   position: absolute;
-  top: 0;
+  top: 105px;
   width: 100%;
   background-color: transparent;
-  padding-top: 20px;
   z-index: 3;
   &__wrapper {
     display: flex;
