--- a/app/sass/media.scss
+++ b/app/sass/media.scss
@@ -181,6 +181,9 @@
   .c-top-panel__wrapper {
     height: 60px;
   }
+  .c-header {
+    top:75px;
+  }
   .c-header__logo {
     width: 130px;
   }
